entries and comments
